# federated-tabPFN

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/agents/: experiment-builder.agent.md  research-scout.agent.md  results-analyst.agent.md
.github/skills/federated-tabular-benchmark/: SKILL.md
.github/skills/flower-benchmarking/: SKILL.md
.github/skills/tabpfn-evaluation/: SKILL.md
configs/: pilot.yaml
docs/: baseline-shortlist.md  capability-contract.md  dataset-shortlist.md  extension-ideas-log.md  extensions-roadmap.md  repo-roadmap.md  results-brief.md  worker-protocol.md  workshop-draft.md  workshop-outline.md
experiments/: pilot.md
papers/: README.md
reports/: 0001-initial-status.md  README.md
src/federated_tabpfn/: __init__.py  cli.py  client_app.py  dashboard.py  dataset_pilot.py  directions.py  ensemble_strategy.py  execution_plan.py  pilot.py  preflight.py  project.py  results_summary.py  runtime_env.py  server_app.py  status.py  study_registry.py
