[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "federated-tabpfn"
version = "0.1.0"
description = "Research benchmark scaffold for federated TabPFN experiments built on Flower"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "pydantic>=2.8",
  "typer>=0.12",
]

[project.optional-dependencies]
benchmark = [
  "flwr[simulation]>=1.29,<1.30",
  "flwr-datasets>=0.5,<0.6",
  "numpy>=1.26",
  "pandas>=2.2",
  "protobuf>=6.31.1,<7",
  "scikit-learn>=1.5",
  "tabpfn>=2.0",
  "xgboost>=2.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"